syntax = "proto3";

package account;
option go_package="account";

message User {
    int64 id = 1;
    string fullname = 2;
    string username = 3;
    string email = 4;
    string password = 5;
    string created_on = 6;
}

message SavedRecipe {
    int64 user_id = 1;
    int64 recipe_id = 2;
}

message GetSavedRecipiesRequest {
    int64 user_id = 1;
}

message GetSavedRecipiesResponse {
    repeated SavedRecipe savedRecipes = 1;
}

message AddSavedRecipeRequest {
    int64 user_id = 1;
    int64 recipe_id = 2;
}

message AddSavedRecipeResponse {
    bool success = 1;
}

message RemoveSavedRecipeRequest {
    int64 user_id = 1;
    int64 recipe_id = 2;
}

message RemoveSavedRecipeResponse {
    bool success = 1;
}

service AccountService {
    rpc GetSavedRecipes(GetSavedRecipiesRequest) returns (GetSavedRecipiesResponse) {};
    rpc AddSavedRecipe(AddSavedRecipeRequest) returns (AddSavedRecipeResponse) {};
    rpc RemoveSavedRecipe(RemoveSavedRecipeRequest) returns (RemoveSavedRecipeResponse) {};
}