syntax = "proto3";

package recipe;
option go_package="recipe";

message Recipe {
    int64 id = 1;
    string name = 2;
    string time = 3;
    string servings = 4;
    string difficulty = 5;
    string cuisine = 6;
    bytes image = 7;
}

message Cuisine {
    int64 id = 1;
    string name = 2;
}

message RecipeIngredient {
    int64 id = 1;
    string name = 2;
    int64 amount = 3;
    bytes image = 4;
}

message GetAllRecipeResponse {
    repeated Recipe recipes = 1;
}

message GetRecipeIngredientsRequest {
    int64 recipe_id = 1;
}

message GetRecipeIngredientsResponse {
    repeated RecipeIngredient recipeIngredients = 1;
}

message GetAllCuisinesResponse {
    repeated Cuisine cuisines = 1;
}

message Empty {

}

service RecipeService {
    rpc GetAllRecipes(Empty) returns (GetAllRecipeResponse) {};
    rpc GetRecipeIngredients(GetRecipeIngredientsRequest) returns (GetRecipeIngredientsResponse) {};
    rpc GetAllCuisines(Empty) returns (GetAllCuisinesResponse) {};
}